removed and rename files to make it look cooler

--- a/src/styles/Pokedex.css
+++ b/src/styles/Pokedex.css
@@ -2,7 +2,7 @@ body {
   background-color: #55b4f8;
 }
 
-.app_backgrnd {
+.pokemain_backgrnd {
   background-repeat: no-repeat;
   height: 100%;
   background-position: center;
