import was missing styles before From, and also classNames were adjusted to say className={styles.poke}

--- a/src/styles/PokeCards.module.css
+++ b/src/styles/PokeCards.module.css
@@ -1,6 +1,8 @@
 .pokeCard {
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow:
+    rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   margin: 4px;
   background-color: #ffd700;
   width: 200px;
@@ -8,19 +10,20 @@
   border-radius: 8px;
   border: solid 2px #fdec8b;
   cursor: pointer;
-
 }
 
-.pokeImg_cont{
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-margin: 6px;
-display: flex;
-justify-content: center;
-background-color: whitesmoke;
-border-radius: 8px;
+.pokeImg_cont {
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+    rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+  margin: 6px;
+  display: flex;
+  justify-content: center;
+  background-color: whitesmoke;
+  border-radius: 8px;
 }
 
-.Pokename_Cont{
+.Pokename_Cont {
   height: 28%;
   display: flex;
   justify-content: center;
